@@ -1,5 +1,5 @@
 
-data_library=./mysql.so
+data_library=/storage/SF.NET/BARTLBY/bartlby-core/mysql.so
 
 
 firebird_db=localhost:/storage/BARTLBY.FDB
@@ -15,7 +15,7 @@ max_concurent_checks=10
 
 shm_key=/var/tmp/
 
-trigger_dir=/storage/SF.NET/BARTLBY/bartlby/trigger
+trigger_dir=/storage/SF.NET/BARTLBY/bartlby-core/trigger
 
 agent_plugin_dir=/storage/SF.NET/BARTLBY/bartlby-plugins
 
